# ChangeLog for net-mail/fetchmail
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchmail/ChangeLog,v 1.60 2005/07/01 16:35:11 ticho Exp $

  01 Jul 2005; Andrej Kacian <ticho@gentoo.org>
  +files/fetchmail-6.2.5-mit-krb5-1.4.patch, fetchmail-6.2.5.ebuild,
  fetchmail-6.2.5-r1.ebuild, fetchmail-6.2.5-r2.ebuild:
  Added a patch to remove a deprecated function call from sources if
  >=mit-krb5-1.4 is installed. Closes bug #97263, reported by Tomasz
  Mloduchowski <mlodutb at mit.edu>.

  31 May 2005; Andrej Kacian <ticho@gentoo.org> fetchmail-6.2.5-r2.ebuild:
  Made ebuild compatible with Gentoo/FreeBSD (bug #92401, by Diego Pettenò
  <flameeyes@gentoo.org>.

  01 May 2005; Tom Martin <slarti@gentoo.org> files/fetchmail:
  Add 'need net' to the init script. Resolves bug 90826, thanks to Henrik Brix
  Andersen <brix@gentoo.org> for reporting.

  29 Apr 2005; Markus Rothe <corsair@gentoo.org> fetchmail-6.2.5-r2.ebuild:
  Added ~ppc64 to KEYWORDS; bug #90750

*fetchmail-6.2.5-r2 (28 Apr 2005)

  28 Apr 2005; Andrej Kacian <ticho@gentoo.org> +fetchmail-6.2.5-r2.ebuild:
  Some ebuild enhancements - mostly DEPEND related. Closes bug #84687, patch
  provided by Diego Pettenò <flameeyes@gentoo.org>.

  02 Nov 2004; Bret Curtis,,, <psi@gentoo.org> fetchmail-6.2.3.ebuild,
  fetchmail-6.2.5-r1.ebuild, fetchmail-6.2.5.ebuild:
  6.2.3 stable on mips, >6.2.3 are marked ~mips

*fetchmail-6.2.5-r1 (03 Sep 2004)

  03 Sep 2004; Andrej Kacian <ticho@gentoo.org>
  +files/fetchmail-6.2.5-broken-headers.patch, +fetchmail-6.2.5-r1.ebuild:
  Apply patch to fetchmail sources to receive mail even if it has broken
  headers, instead of deleting it, or choking up on it, for POP3 fetching.
  Patch submitted by Philippe Weibel <philippe.weibel@free.fr>, closes
  #34788.

  07 Aug 2004; Tom Knight <tomk@gentoo.org>
  +files/fetchmail-6.2.5-fetchsizelimit.patch, fetchmail-6.2.5.ebuild: