@@ -2,13 +2,13 @@
 Hash: SHA1
 
 MD5 faaffbf24a8f1845717127119690cbc9 fetchmail-6.2.1-r1.ebuild 1773
-MD5 4699605e930914b11ab0b894d5b8c545 fetchmail-6.2.4.ebuild 2143
-MD5 0e3513a92097cbf36de0d981f0c6489e fetchmail-5.9.14.ebuild 1897
-MD5 93696635908b3e9f12e791de449a82c8 fetchmail-6.2.2-r2.ebuild 2043
-MD5 8a5a81b6cd89c3cf5fe341accd3ed708 fetchmail-6.2.3.ebuild 1962
+MD5 fad43483dd30edcc1e3d5da45141a535 fetchmail-6.2.4.ebuild 2138
+MD5 d01bc5cb58cfda170f585b3e89bef8ed fetchmail-5.9.14.ebuild 1894
+MD5 00c01108df1dd1d60f071b2e1b929253 fetchmail-6.2.2-r2.ebuild 2038
+MD5 243728bcac42ad79161b92714363d75d fetchmail-6.2.3.ebuild 1961
 MD5 44c94474b2d648ebc94ab91cae192e7f fetchmail-6.2.5-r2.ebuild 2722
 MD5 900f6ef3ff4d10ef0668f4d197558e9c fetchmail-6.2.5.ebuild 2609
-MD5 878fc9ef47abbdf621ab25f198ff7c4c ChangeLog 9579
+MD5 fb51e74fd1ba160931dae8ea40eec4a2 ChangeLog 9765
 MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
 MD5 e2e0aea60ed02e6393a387a2288ecb6b fetchmail-6.2.5-r1.ebuild 2734
 MD5 5b0a50b0a0193afbcb7eff9ac3d5fcb7 files/digest-fetchmail-6.2.1-r1 68
@@ -32,7 +32,7 @@ MD5 256e473e140583f41c7da6ecd9d815be files/digest-fetchmail-6.2.5 68
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCxXDcQlM6RnzZP+IRAi/gAKCHEOAWxoZ0VhSg1Q1mlyJHKDHTpgCgpKDX
-M0/+WDDK9E/NJgoAENK3czc=
-=SRRl
+iD8DBQFCxXGUQlM6RnzZP+IRAr++AKCGfKLDRNorJ9Y+WyXe3ZXPhdo/LACfV1WN
+g4RTyah9VSe/KXnJgWcsO1A=
+=5r1v
 -----END PGP SIGNATURE-----
