@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchmail/fetchmail-6.2.2-r2.ebuild,v 1.5 2004/07/01 22:31:31 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchmail/fetchmail-6.2.2-r2.ebuild,v 1.6 2005/07/01 16:38:17 ticho Exp $
 
 inherit eutils
 
