@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/fetchmail
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchmail/ChangeLog,v 1.60 2005/07/01 16:35:11 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchmail/ChangeLog,v 1.61 2005/07/01 16:38:17 ticho Exp $
+
+  01 Jul 2005; Andrej Kacian <ticho@gentoo.org> fetchmail-5.9.14.ebuild,
+  fetchmail-6.2.2-r2.ebuild, fetchmail-6.2.3.ebuild, fetchmail-6.2.4.ebuild:
+  Fixed year in copyright headers.
 
   01 Jul 2005; Andrej Kacian <ticho@gentoo.org>
   +files/fetchmail-6.2.5-mit-krb5-1.4.patch, fetchmail-6.2.5.ebuild,
